k8s/api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prod-api
  namespace: prod
spec:
  selector:
    app: prod-api
  ports:
    - port: 80
      targetPort: 8000
  type: ClusterIP
